2008-07-23	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.9 release

	* ica/ica.rc.in:
	* setup/setup.rc.in:
	* ima/italc.rc.in:
	fixed version-information (closes #2025199)

	* ica/src/demo_server.h:
	* ica/src/demo_server.cpp:
	moved cursor-position queries to demoServer - workaround for an
	unknown bug in Qt 4.4 (closes #1994549, #2006526, #2015845)

	* lib/src/isd_base.cpp:
	use QTcpSocket::waitForBytesWritten() rather than flush()

	* lib/src/local_system.cpp:
	initialize LZO-library on startup

	* lib/src/messagebox.cpp:
	fixed compiler warning

2008-07-06	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.9-rc4 release

	* ica/src/isd_server.cpp:
	win32: run processes with rights of logged on user

	* lib/src/local_system.cpp:
	win32: tried better way for logging on user but had no success

	* ica/src/demo_server.h:
	* ica/src/demo_server.cpp:
	use QTimer-objects instead of QTimer::singleShot() as Qt 4.4.0 crashes
	quite often otherwise (for whatever reason)

	* utils-win32/Makefile.am:
	* utils-win32/userinfo.cpp:
	removed obsolete files

	* build_mingw32:
	-fno-strict-aliasing is not neccessary anymore with GCC 4.3

	* ima/src/main.cpp:
	if custom ISD-port is used, apply at startup

	* ica/x11/x11vnc/inet.c:
	renamed deprecated member-variable as it's been reverted on 2008-06-24

2008-06-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/client.cpp:
	do not call client::update() outside of GUI-thread - fixes crashes of
	master

2008-06-24	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/ivs.cpp:
	* ica/x11/x11vnc/userinput.c:
	* ica/x11/x11vnc/inet.c:
	* ica/x11/x11vnc/options.h:
	* ica/x11/x11vnc/xinerama.c:
	* ica/x11/x11vnc/user.c:
	* ica/x11/x11vnc/8to24.c:
	* ica/x11/x11vnc/connections.c:
	* ica/x11/x11vnc/cursor.c:
	* ica/x11/x11vnc/x11vnc_defs.c:
	* ica/x11/x11vnc/tkx11vnc.h:
	* ica/x11/x11vnc/scan.c:
	* ica/x11/x11vnc/gui.c: