@@ -34,6 +34,55 @@
 
 #ifdef BUILD_WIN32
 #include <windows.h>
+#include <QtCore/QFile>
+#include <QtCore/QTextStream>
+
+typedef struct tagWTSSESSION_NOTIFICATION
+{
+	DWORD cbSize;
+	DWORD dwSessionId;
+} WTSSESSION_NOTIFICATION, *PWTSSESSION_NOTIFICATION;
+ 
+#define WTS_SESSION_LOGON 0x5
+#define WTS_SESSION_LOGOFF 0x6
+#define WTS_CURRENT_SERVER_HANDLE 0
+
+typedef enum _WTS_INFO_CLASS
+{
+	WTSInitialProgram       = 0,
+	WTSApplicationName      = 1,
+	WTSWorkingDirectory     = 2,
+	WTSOEMId                = 3,
+	WTSSessionId            = 4,
+	WTSUserName             = 5,
+	WTSWinStationName       = 6,
+	WTSDomainName           = 7,
+	WTSConnectState         = 8,
+	WTSClientBuildNumber    = 9,
+	WTSClientName           = 10,
+	WTSClientDirectory      = 11,
+	WTSClientProductId      = 12,
+	WTSClientHardwareId     = 13,
+	WTSClientAddress        = 14,
+	WTSClientDisplay        = 15,
+	WTSClientProtocolType   = 16,
+	WTSIdleTime             = 17,
+	WTSLogonTime            = 18,
+	WTSIncomingBytes        = 19,
+	WTSOutgoingBytes        = 20,
+	WTSIncomingFrames       = 21,
+	WTSOutgoingFrames       = 22,
+	WTSClientInfo           = 23,
+	WTSSessionInfo          = 24 
+} WTS_INFO_CLASS;
+
+typedef BOOL(WINAPI *PFN_WTSQuerySessionInformation)( HANDLE, DWORD,
+					WTS_INFO_CLASS, LPTSTR*, DWORD* );
+extern PFN_WTSQuerySessionInformation pfnWTSQuerySessionInformation;
+
+typedef void(WINAPI *PFN_WTSFreeMemory)( PVOID );
+extern PFN_WTSFreeMemory pfnWTSFreeMemory;
+
 #endif
 
 #include <QtCore/QString>
@@ -132,7 +181,7 @@ private:
 
 #ifdef BUILD_WIN32
 	static void WINAPI main( DWORD, char * * );
-	static void WINAPI serviceCtrl( DWORD _ctrlcode );
+	static DWORD WINAPI serviceCtrl( DWORD _ctrlcode, DWORD dwEventType, LPVOID lpEventData, LPVOID lpContext );
 	static bool reportStatus( DWORD _state, DWORD _exit_code,
 							DWORD _wait_hint );
 
